conclusion y analisis segunda parte

--- a/TP1/informe/conclusiones.tex
+++ b/TP1/informe/conclusiones.tex
@@ -1,1 +1,21 @@
 \section{Conclusiones}
+Las experimentaciones anteriormente realizadas nos permitieron deducir, a través de la captura
+de paquetes $ARP$ durante un intervalo aceptable de tiempo información sobre tanto la topología de la red como las
+interacciones entre los distintos dispositivos conectados a ella. Quedan claros los límites abarcados por el protocolo,
+no siendo útil para realizar análisis más avanzados acerca de las comunicaciones y la transferencia de datos entre las
+diferentes entidades (sólo resuelve cómo cada host sabe a dónde mandar los datos). Cabe destacar que el
+estudio de $ARP$ permite ver de cerca la relación entre el nivel de red y el nivel de enlace, y la importancia de que
+estos niveles puedan trabajar en conjunto para, al menos poder detectar la ubicación física de los diversos nodos de
+que conforman una red LAN y generar así la base para la comunicacióon entre los diversos dispositivos.\\
+
+Nos resulta notorio ver que la cantidad de símbolos involucrados no necesariamente altera la entropía de una fuente
+de información en gran medida, si no que importa más la distribución de los mismos. Analizando la fórmula vemos que
+es deducible, ya que la mayor entropía se produce cuando todos los símbolos son equiprobables, y termina representando
+la cantidad de bits que serán necesarios para identicar a todos los posibles símbolos (log2(cantSimbolos)). La cantidad
+de símbolos nos marca la entropía máxima, pero la distribución estadística de la aparición de símbolos determina en
+que parte del espectro se encuentra la fuente de información.\\
+
+Por último, creemos que este trabajo práctico nos deja la mente abierta a las nuevas posibilidades que se nos
+presentan a la hora de analizar el tráfico de una red, tanto a nivel de protocolos como de algoritmos de ruteo y simil. 
+No sirvió para lograr visualizar mediante grafos y gráficos todas las interacciones que existen para la construcción de las conexiones 
+que utilizamos diariamente.
