--- a/TP1/informe/segundaConsigna.tex
+++ b/TP1/informe/segundaConsigna.tex
@@ -260,6 +260,7 @@ del próximo paquete.\\
 \caption{Source/Destination paquetes ARP - Operación: Is-At - aulasDC}
 \end{figure}
 
+\newpage
 %Aca va frutaaaaaaaaa....
 En la red $Abasto$ notamos un host que se distingue del resto: 172.16.0.1. Este host es la fuente del 99\% de los paquetes $ARP$ escuchados.
 Cómo se puede ver en el grafo es el centro de la red enviando a todos los demás dispositivos $Who-Has$ para actualizar su tabla que asocia $IP$ con 
