--- a/TP1/informe/segundaConsigna.tex
+++ b/TP1/informe/segundaConsigna.tex
@@ -335,5 +335,9 @@ para la red $aulasDC$ que ha sido la de mayor entropía calculada. Si bien hemos
 incentidumbre en cuánto a los nodos que interactúan en la red. Una suposición es que quizás la red cuente con poca señal wifi provocando que 
 los dispositivos se conecten varias veces hasta establecer una conexión y cambien su $IP$ más frecuentemente. Con lo cuál las probabilidades son un 
 poco más equiprobables en dicha red haciendo que la entropía sea mayor.
-En la red $laboratoriosDC$ al identificar varias subredes la entropía es alta dado que existen varios nodos centrales que unen estas redes. 
+En la red $laboratoriosDC$ al identificar varias subredes la entropía es alta dado que existen varios nodos centrales que unen estas redes.
+
+Por último durante las capturas, hemos identificado ciertos dispositivos con $IP$ 0.0.0.0 creemos que esto se debe a que cuando un cliente se conecta a una red que posee un servidor DHCP y quiere recibir una IP de éste, manda una petición con su ID en forma de broadcast para que lo detecte el servidor. Una vez detectado por el servidor, éste manda una o varias ofertas de IP a ese ID.
+El cliente eventualmente podría recibir la oferta, tomar uno de esos IP y extraer la dirección del router.
+Como el servidor realiza la misma operación con todos los demás clientes que pidan una IP, el cliente debe comprobar que la IP que eligió no la tiene otro cliente. Para esto, envía un paquete $who-has$ con su MAC adress y la IP 0.0.0.0 como fuente para evitar confundir las ARP caches en otros hosts. Si el $who-has$ es respondido, el cliente rechaza el IP elegido.
 
