--- a/TP1/informe/primeraConsigna.tex
+++ b/TP1/informe/primeraConsigna.tex
@@ -4,7 +4,7 @@
 Utilizamos el ejemplo provisto por la documentación de \emph{Scapy} y lo visto en clase. 
 El mismo se encuentra modificado para que se almacenen todos los paquetes Ethernet de la red local durante cierto tiempo. \\
 
-Para correr el programa se debe ejecutar el comando: \\ \\ \centerline{python src/tp.py T} \\ \\ donde T es el intervalo de tiempo en segundos 
+Para correr el programa se debe ejecutar el comando: \\ \\ \centerline{sudo python src/tp.py T} \\ \\ donde $T$ es el intervalo de tiempo en segundos 
 que correrá la herramienta.
 
 \subsection{Análisis de entropía de la red}
