--- a/TP2/informe/segundaConsigna.tex
+++ b/TP2/informe/segundaConsigna.tex
@@ -1,1 +1,61 @@
 \section{Segunda consigna: gráficos y análisis}
+
+\subsection{Universidad de Francia - IP: 193.51.86.16}
+
+\bigskip
+
+\begin{tabular}{ | l | c | c | c | c |}
+ \hline                 
+   Hop & IP &  RTT promedio (s)  & deltaRTT promedio & Ubicación\\
+ \hline 
+   1 & 192.168.0.1 & 0,006502 & 0,006502 & Argentina - Buenos Aires\\ 
+ \hline 
+   2 & 200.89.164.189 & 0,025426 & 0,018924 & Argentina - Buenos Aires\\ 
+  \hline 
+   3 & 200.89.165.5 & 0,022739 & 0 & Argentina - Buenos Aires\\ 
+  \hline 
+   4 & 200.89.165.250 & 0,023967 & 0,001227 & Argentina - Buenos Aires\\ 
+  \hline 
+   5 & 206.165.31.213 & 0,023886 & 0 & Estados Unidos\\ 
+  \hline 
+   6 & 67.16.139.18 & 0.153896 & 0,130009 & Estados Unidos - Manhattan\\ 
+  \hline 
+   7 & 213.248.76.189 & 0,147402 & 0 & Europa - Telia Network Services\\ 
+  \hline 
+   8 & 62.115.143.64 & 0,173705 & 0,026303 & Europa - Telia Network Services UK\\ 
+  \hline 
+   9 & 213.155.130.86 & 0,174316 & 0,000610 & Europa - Telia Network Services UK\\ 
+  \hline 
+   10 & 80.239.132.130 & 0,183801 & 0,009485 & Alemania - Telia AB/Telia Int. Carrier\\ 
+  \hline 
+   11 & 195.2.30.46 & 0,249497 & 0,065696 & Europa\\ 
+  \hline 
+   12 & 195.2.28.154 & 0,244204 & 0 & Europa\\ 
+  \hline 
+   11 & 195.2.30.46 & 0,249497 & 0,065696 & Europa\\ 
+  \hline 
+   11 & 195.2.30.46 & 0,249497 & 0,065696 & Europa\\ 
+  \hline 
+   11 & 195.2.30.46 & 0,249497 & 0,065696 & Europa\\ 
+  \hline 
+   11 & 195.2.30.46 & 0,249497 & 0,065696 & Europa\\ 
+  \hline 
+   11 & 195.2.30.46 & 0,249497 & 0,065696 & Europa\\ 
+ \hline 
+\end{tabular}
+
+\bigskip
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=1\textwidth]{graficos/zScore_Francia.jpg}
+\caption{zScore promedio por hop - Universidad de Francia}
+\label{francia_zs}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=1\textwidth]{graficos/rTT_Francia.jpg}
+\caption{RTT promedio por hop - Universidad de Francia}
+\label{francia_rtt}
+\end{figure}
