--- a/TP2/informe/segundaConsigna.tex
+++ b/TP2/informe/segundaConsigna.tex
@@ -20,27 +20,42 @@
   \hline 
    6 & 67.16.139.18 & 0.153896 & 0,130009 & Estados Unidos - Manhattan\\ 
   \hline 
-   7 & 213.248.76.189 & 0,147402 & 0 & Europa - Telia Network Services\\ 
+   7 & 213.248.76.189 & 0,147402 & 0 & Europa (Telia Network Services)\\ 
   \hline 
-   8 & 62.115.143.64 & 0,173705 & 0,026303 & Europa - Telia Network Services UK\\ 
+   8 & 62.115.143.64 & 0,173705 & 0,026303 & Europa (Telia Network Services UK)\\ 
   \hline 
-   9 & 213.155.130.86 & 0,174316 & 0,000610 & Europa - Telia Network Services UK\\ 
+   9 & 213.155.130.86 & 0,174316 & 0,000610 & Europa (Telia Network Services UK)\\ 
   \hline 
-   10 & 80.239.132.130 & 0,183801 & 0,009485 & Alemania - Telia AB/Telia Int. Carrier\\ 
+   10 & 80.239.132.130 & 0,183801 & 0,009485 & Alemania (Telia AB/Telia Int. Carrier)\\ 
   \hline 
    11 & 195.2.30.46 & 0,249497 & 0,065696 & Europa\\ 
   \hline 
    12 & 195.2.28.154 & 0,244204 & 0 & Europa\\ 
   \hline 
-   11 & 195.2.30.46 & 0,249497 & 0,065696 & Europa\\ 
+   13 & 195.2.10.145 & 0,243621 & 0 & Europa\\ 
   \hline 
-   11 & 195.2.30.46 & 0,249497 & 0,065696 & Europa\\ 
+   14 & 195.10.54.66 & 0,269441 & 0,025820 & Francia (Dyson Ltd)\\ 
   \hline 
-   11 & 195.2.30.46 & 0,249497 & 0,065696 & Europa\\ 
+   15 & 193.51.177.25 & 0,271685 & 0,002243 & Francia - Paris\\ 
   \hline 
-   11 & 195.2.30.46 & 0,249497 & 0,065696 & Europa\\ 
+   16 & 193.51.177.116 & 0,258662 & 0 & Francia - Paris\\ 
   \hline 
-   11 & 195.2.30.46 & 0,249497 & 0,065696 & Europa\\ 
+   17 & 193.51.181.101 & 0,258660 & 0 & Francia - Paris\\
+  \hline 
+   18 & 195.221.127.166 & 0,269296 & 0,010635 & Francia - Paris\\
+  \hline 
+   19 & 193.51.86.16 & 0,256802 & 0 & Francia\\
+  \hline 
+   20 & 193.51.181.101 & 0,258082 & 0,001279 & Francia\\
+  \hline 
+   21 & 193.51.181.101 & 0,254919 & 0 & Francia\\
+  \hline 
+   22 & 193.51.181.101 & 0,255926 & 0,001007 & Francia\\
+  \hline 
+   23 & 193.51.181.101 & 0,254769 & 0 & Francia\\
+  \hline 
+   24 & 193.51.181.101 & 0,256566 & 0,001797 & Francia\\
+    
  \hline 
 \end{tabular}
 
