--- a/TP2/informe/segundaConsigna.tex
+++ b/TP2/informe/segundaConsigna.tex
@@ -1,6 +1,6 @@
 \section{Segunda consigna: gráficos y análisis}
 
-\subsection{Universidad de Francia - IP: 193.51.86.16}
+\subsection{Universidad París Descartes - Francia - IP: 193.51.86.16}
 
 \bigskip
 
@@ -54,12 +54,18 @@
   \hline 
    23 & 193.51.181.101 & 0,254769 & 0 & Francia\\
   \hline 
-   24 & 193.51.181.101 & 0,256566 & 0,001797 & Francia\\
-    
+   24 & 193.51.181.101 & 0,256566 & 0,001797 & Francia\\    
  \hline 
 \end{tabular}
 
 \bigskip
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=1\textwidth]{graficos/rTT_Francia.jpg}
+\caption{RTT promedio por hop - Universidad de Francia}
+\label{francia_rtt}
+\end{figure}
 
 \begin{figure}[H]
 \centering
@@ -68,9 +74,4 @@
 \label{francia_zs}
 \end{figure}
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=1\textwidth]{graficos/rTT_Francia.jpg}
-\caption{RTT promedio por hop - Universidad de Francia}
-\label{francia_rtt}
-\end{figure}
+
