--- a/TP2/informe/intro.tex
+++ b/TP2/informe/intro.tex
@@ -12,7 +12,7 @@ de $RTT$ podríamos estar en presencia de un enlace submarino.
 Se utilizarán como objetivos las siguientes universidades. Las mismas están ubicadas en diferentes partes del mundo:
 \begin{enumerate}
 \item Universidad París Descartes - Francia (www.univ-paris5.fr) (IP: 193.51.86.16)
-\item Universidad de Nigeria - Nigeria (www.unn.edu.ng) (IP: 162.144.89.24)
+\item Universidad de Musku - Rusia (www.msu.ru) (IP: 188.44.50.103)
 \item Universidad de Hong Kong - China (www.ust.hk) (IP: 143.89.14.2)
 \item Universidad de Sydney - Australia (www.sydney.edu.au) (IP: 129.78.5.11)
 \end{enumerate}
