--- a/TP2/informe/rusia.tex
+++ b/TP2/informe/rusia.tex
@@ -1,5 +1,4 @@
- 
-\subsection{Universidad De Mosku - Rusia - IP: 188.44.50.103}
+ \subsection{Universidad de Mosku - Rusia}
 
 \bigskip
 
@@ -54,5 +53,3 @@ Hop & IP &  RTT promedio (s)  & deltaRTT promedio & Ubicación\\
 \caption{zScore promedio por hop - Universidad de Mosku}
 \label{Rus_zs}
 \end{figure}
-
-\newpage
