--- a/TP2/informe/segundaConsigna.tex
+++ b/TP2/informe/segundaConsigna.tex
@@ -1,81 +1,6 @@
-\section{Segunda consigna: gráficos y análisis}
+\section{Gráficos y análisis}
+\input{francia}
 
-\subsection{Universidad París Descartes - Francia - IP: 193.51.86.16}
-
-\bigskip
-
-\begin{tabular}{ | l | c | c | c | c |}
- \hline                 
-   Hop & IP &  RTT promedio (s)  & deltaRTT promedio & Ubicación\\
- \hline 
-   1 & 192.168.0.1 & 0,006502 & 0,006502 & Argentina - Buenos Aires\\ 
- \hline 
-   2 & 200.89.164.189 & 0,025426 & 0,018924 & Argentina - Buenos Aires\\ 
-  \hline 
-   3 & 200.89.165.5 & 0,022739 & 0 & Argentina - Buenos Aires\\ 
-  \hline 
-   4 & 200.89.165.250 & 0,023967 & 0,001227 & Argentina - Buenos Aires\\ 
-  \hline 
-   5 & 206.165.31.213 & 0,023886 & 0 & Estados Unidos\\ 
-  \hline 
-   6 & 67.16.139.18 & 0.153896 & 0,130009 & Estados Unidos - Manhattan\\ 
-  \hline 
-   7 & 213.248.76.189 & 0,147402 & 0 & Europa (Telia Network Services)\\ 
-  \hline 
-   8 & 62.115.143.64 & 0,173705 & 0,026303 & Europa (Telia Network Services UK)\\ 
-  \hline 
-   9 & 213.155.130.86 & 0,174316 & 0,000610 & Europa (Telia Network Services UK)\\ 
-  \hline 
-   10 & 80.239.132.130 & 0,183801 & 0,009485 & Alemania (Telia AB/Telia Int. Carrier)\\ 
-  \hline 
-   11 & 195.2.30.46 & 0,249497 & 0,065696 & Europa\\ 
-  \hline 
-   12 & 195.2.28.154 & 0,244204 & 0 & Europa\\ 
-  \hline 
-   13 & 195.2.10.145 & 0,243621 & 0 & Europa\\ 
-  \hline 
-   14 & 195.10.54.66 & 0,269441 & 0,025820 & Francia (Dyson Ltd)\\ 
-  \hline 
-   15 & 193.51.177.25 & 0,271685 & 0,002243 & Francia - Paris\\ 
-  \hline 
-   16 & 193.51.177.116 & 0,258662 & 0 & Francia - Paris\\ 
-  \hline 
-   17 & 193.51.181.101 & 0,258660 & 0 & Francia - Paris\\
-  \hline 
-   18 & 195.221.127.166 & 0,269296 & 0,010635 & Francia - Paris\\
-  \hline 
-   19 & 193.51.86.16 & 0,256802 & 0 & Francia\\
-  \hline 
-   20 & 193.51.181.101 & 0,258082 & 0,001279 & Francia\\
-  \hline 
-   21 & 193.51.181.101 & 0,254919 & 0 & Francia\\
-  \hline 
-   22 & 193.51.181.101 & 0,255926 & 0,001007 & Francia\\
-  \hline 
-   23 & 193.51.181.101 & 0,254769 & 0 & Francia\\
-  \hline 
-   24 & 193.51.181.101 & 0,256566 & 0,001797 & Francia\\    
- \hline 
-\end{tabular}
-
-\bigskip
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=1\textwidth]{graficos/rTT_Francia.jpg}
-\caption{RTT promedio por hop - Universidad de Francia}
-\label{francia_rtt}
-\end{figure}
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=1\textwidth]{graficos/zScore_Francia.jpg}
-\caption{zScore promedio por hop - Universidad de Francia}
-\label{francia_zs}
-\end{figure}
-
-\newpage
 \input{australia}
 
-\newpage
 \input{rusia}
